force-app/main/default/objects/PTW_Inspection_Report__c.object
<CustomObject>
    <fields>
        <fullName>Main_Work_Center_PTW__c</fullName>
        <label>Main Work Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Permit_to_work__c</fullName>
        <label>Main Work Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPS-TOC1</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC2</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC3</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC4</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC5</fullName>
                </value>
                <value>
                    <fullName>OPS-UTIL</fullName>
                </value>
                <value>
                    <fullName>OPS-SPP</fullName>
                </value>
                <value>
                    <fullName>OPS-TLB</fullName>
                </value>
                <value>
                    <fullName>OPS-TPX</fullName>
                </value>
                <value>
                    <fullName>OPS-LABIX</fullName>
                </value>
                <value>
                    <fullName>OPS-LABI</fullName>
                </value>
                <value>
                    <fullName>OPS-MOVE</fullName>
                </value>
                <value>
                    <fullName>OPS-OFFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Work_Clearance__c</fullName>
        <label>Main Work Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Work_Clearances__c</fullName>
        <label>Main Work Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPS-TOC1</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC2</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC3</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC4</fullName>
                </value>
                <value>
                    <fullName>OPS-TOC5</fullName>
                </value>
                <value>
                    <fullName>OPS-UTIL</fullName>
                </value>
                <value>
                    <fullName>OPS-SPP</fullName>
                </value>
                <value>
                    <fullName>OPS-TLB</fullName>
                </value>
                <value>
                    <fullName>OPS-TPX</fullName>
                </value>
                <value>
                    <fullName>OPS-LABIX</fullName>
                </value>
                <value>
                    <fullName>OPS-LABI</fullName>
                </value>
                <value>
                    <fullName>OPS-MOVE</fullName>
                </value>
                <value>
                    <fullName>OPS-OFFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_PTW_Inspection__c</fullName>
        <label>Number of PTW Inspection</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PTW_Verification__c</fullName>
        <label>Number of PTW Verification</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Permit_to_Work__c</fullName>
        <label>Number of Permit to Work</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Permit_to_Works__c</fullName>
        <formula>IF( ISNUMBER(  Number_of_Permit_to_Work__c  ),VALUE(Number_of_Permit_to_Work__c) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Permit to Works</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Work_Clearances__c</fullName>
        <label>Number of Work Clearances</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTW_Main_Work_Center__c</fullName>
        <formula>IF( ISBLANK( TEXT(Main_Work_Center_Permit_to_work__c))   , TEXT( Main_Work_Center_Work_Clearances__c ), TEXT(Main_Work_Center_Permit_to_work__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECTIONS__c</fullName>
        <formula>IF( OR(Section__c = &quot;QMOS&quot; ,Section__c = &quot;MFOP&quot;),Section__c ,&quot;OPS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SECTIONS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Permit_to_Work__c</fullName>
        <label>Status of Permit to Work</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Stop_Work__c</fullName>
        <formula>IF(OR( Status_of_Permit_to_Work__c =&apos;หยุดงานชั่วคราว&apos;,Status_of_Permit_to_Work__c =&apos;หยุดงานถาวร&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stop Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Permit_to_Work__c</fullName>
        <label>Type of Permit to Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Created_Date__c</fullName>
        <label>WC Created Date</label>
        <type>Date</type>
    </fields>
    <label>PTW Inspection Report</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>